--- a/style.css
+++ b/style.css
@@ -122,8 +122,8 @@ body {
 }
 
 .loogo {
-    margin-left: 40.5%;
-    margin-right: 40.5%;
+    display: flex;
+    justify-content: center;
     margin-top: 50px;
 }
 
